constraint-templates/template-users.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: limitclusteradmins
spec:
  crd:
    spec:
      names:
        kind: LimitClusterAdmins
      validation:
        openAPIV3Schema:
          type: object
          properties:
            maxAdmins:
              type: integer
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package limitclusteradmins

        violation[{"msg": msg}] {
          input.review.kind.kind == "ClusterRoleBinding"
          input.review.object.roleRef.name == "cluster-admin"
          
          max_admins := input.parameters.maxAdmins
          
          existing_crbs := {crb | 
            crb := data.inventory.cluster["rbac.authorization.k8s.io/v1"].ClusterRoleBinding[_]
            crb.metadata.name != input.review.object.metadata.name
            crb.roleRef.name == "cluster-admin"
          }
          
          existing_users := {subject.name |
            crb := existing_crbs[_]
            subject := crb.subjects[_]
            subject.kind == "User"
          }
          
          request_users := {subject.name |
            subject := input.review.object.subjects[_]
            subject.kind == "User"
          }
          
          all_users := existing_users | request_users
          total_count := count(all_users)
          
          total_count > max_admins
          
          msg := sprintf("Denied: Assigning this user to cluster-admin exceeds the maximum limit of %v. The total would be %v.", [max_admins, total_count])
        }
